# gnome-search-providers-vscode

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  justfile
.forgejo/workflows/: ci.yaml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
dbus-1/: de.swsnr.VSCodeSearchProvider.service  de.swsnr.searchprovider.VSCode.service
providers/: de.swsnr.VSCodeSearchProvider.code-insiders.ini  de.swsnr.VSCodeSearchProvider.code-oss.ini  de.swsnr.VSCodeSearchProvider.code.ini  de.swsnr.VSCodeSearchProvider.codium.ini  de.swsnr.VSCodeSearchProvider.visual-studio-code.ini  de.swsnr.searchprovider.vscode.arch.code-oss.ini  de.swsnr.searchprovider.vscode.arch.visual-studio-code.ini  de.swsnr.searchprovider.vscode.codium.ini  de.swsnr.searchprovider.vscode.official.code.ini  de.swsnr.searchprovider.vscode.vscodium.ini
scripts/: check
src/: main.rs  providers.rs  reload.rs  search.rs  searchprovider.rs  storage.rs  systemd.rs  workspaces.rs  xdg.rs
src/tests/: code_1_54_storage.json  code_1_55_storage.json
supply-chain/: audits.toml  config.toml
systemd/: de.swsnr.searchprovider.VSCode.service  gnome-search-providers-vscode.service
