[package]
name = "gnome-search-providers-vscode"
description = "Gnome search providers for recent workspace in VSCode variants"
readme = "README.md"
homepage = "https://github.com/swsnr/gnome-search-providers-vscode"
repository = "https://github.com/swsnr/gnome-search-providers-vscode"
version = "2.3.0"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
rust-version = "1.81"
edition = "2021"
# We don't publish this to crates.io; you can't install it with cargo install
# because you'd miss the required service and configuration files, and you
# wouldn't want to depend on it either.
publish = false

[dependencies]
# TODO: Change back to released 0.20.x after https://github.com/gtk-rs/gtk-rs-core/pull/1634 was merged and released
gio = { git ="https://github.com/swsnr/gtk-rs-core.git", branch = "dbus_register_vfunc", features = ["v2_80"] }
glib = { git ="https://github.com/swsnr/gtk-rs-core.git", branch = "dbus_register_vfunc", features = ["log", "log_macros", "v2_66"] }
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["serde_json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
futures-util = "0.3"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
publish = false
verify = false
