[package]
name = "gnome-search-providers-vscode"
description = "Gnome search providers for recent workspace in VSCode variants"
readme = "README.md"
homepage = "https://github.com/swsnr/gnome-search-providers-vscode"
repository = "https://github.com/swsnr/gnome-search-providers-vscode"
version = "2.4.0"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
rust-version = "1.81"
edition = "2021"
# We don't publish this to crates.io; you can't install it with cargo install
# because you'd miss the required service and configuration files, and you
# wouldn't want to depend on it either.
publish = false

[dependencies]
rusqlite = { version = "0.32.1", features = ["serde_json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
tokio = { version = "1.43.0", features = ["rt", "macros", "process", "signal", "sync", "time"] }
zbus = { version = "5.3.0", default-features = false, features = ["tokio"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "ansi", "registry"] }
futures-util = "0.3.31"
url = "2.5.4"
percent-encoding = "2.3.1"
logcontrol-zbus = "3.0.0"
logcontrol-tracing = "0.2.0"
configparser = "3.1.0"
rand = "0.8.5"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
publish = false
verify = false
