[package]
name = "gnome-search-providers-vscode"
description = "Gnome search providers for recent workspace in VSCode variants"
readme = "README.md"
homepage = "https://codeberg.org/swsnr/gnome-search-providers-vscode"
repository = "https://codeberg.org/swsnr/gnome-search-providers-vscode"
version = "2.5.4"
license = "EUPL-1.2"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
rust-version = "1.89"
edition = "2024"
# We don't publish this to crates.io; you can't install it with cargo install
# because you'd miss the required service and configuration files, and you
# wouldn't want to depend on it either.
publish = false

[dependencies]
# async-channel = "2.5.0"
async-executor = { version = "1.3.3", features = ["static"] }
async-io = { version = "2.6.0", features = ["tracing"] }
async-lock = "3.0.0"
async-process = { version="2.5.0", features = ["tracing"] }
async-signal = "0.2.13"
blocking = { version = "1.6.2", features = ["tracing"] }
configparser = "3.1.0"
fastrand = "2.3.0"
futures-lite = "2.6.1"
logcontrol-tracing = "0.2.0"
logcontrol-zbus = "3.0.0"
percent-encoding = "2.3.1"
rusqlite = { version = "0.37.0", features = ["serde_json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "ansi", "registry", "tracing-log"] }
url = "2.5.4"
zbus = { version = "5.3.0", default-features = false }

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
publish = false
